# python-app-template

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: continuous-integration.yaml
python_app_template/: __main__.py
python_app_template/app_config/: __init__.py  app_config.py  app_config_schema.py
test/: test_test.py
