[tool.poetry]
name = "python_app_template"
version = "0.0.0"
description = "Python app template"
authors = ["Rafał Majewski <goodheropl@gmail.com>"]
license = "CC0-1.0"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
mypy = "^0.991"
isort = "^5.10.1"
flake8 = "^5.0.4"
pylint = "^2.15.5"
bandit = "^1.7.4"
poethepoet = "^0.16.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
isort-fix = { shell = "isort ./" }
isort-check = { shell = "isort --check-only ./" }
black-fix = { shell = "black ./" }
black-check = { shell = "black --check ./" }
flake8-check = { shell = "flake8 ./" }
mypy-check = { shell = "mypy ./" }
pylint-check = { shell = "pylint --recursive=y ./" }
bandit-check = { shell = "bandit -r ./" }
unittest-check = { shell = "python -m unittest discover" }
