[tool.poetry]
name = "python_app_template"
version = "0.0.0"
description = "Python app template"
authors = ["Rafał Majewski <goodheropl@gmail.com>"]
license = "CC0-1.0"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.4"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
mypy = "^0.991"
isort = "^5.11.4"
flake8 = "^6.0.0"
pylint = "^2.17.1"
bandit = "^1.7.4"
poethepoet = "^0.17.1"
coverage = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
isort-fix = { shell = "isort ./" }
isort-check = { shell = "isort --check-only ./" }
black-fix = { shell = "black ./" }
black-check = { shell = "black --check ./" }
flake8-check = { shell = "flake8 ./" }
mypy-check = { shell = "mypy ./" }
pylint-check = { shell = "pylint --recursive=y ./" }
bandit-check = { shell = "bandit -r ./" }
unittest-check = { shell = "python -m coverage run -m unittest discover && python -m coverage report -m && python -m coverage html" }
formatting-check = { sequence = ["isort-check", "black-check"] }
formatting-fix = { sequence = ["isort-fix", "black-fix"] }
linting-check = { sequence = ["flake8-check", "mypy-check", "pylint-check"] }
start = { shell = "python -m python_app_template" }
